added my new all task

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>sdfghjeryi bjgfsehjkn bftfdigrtdssdgvk</h1>
+    <h1>LOGO</h1>
 </body>
 </html>
